# vllm-ascend

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  Dockerfile  Dockerfile.310p  Dockerfile.310p.openEuler  Dockerfile.a3  Dockerfile.a3.openEuler  Dockerfile.openEuler  README.md  README.zh.md  mypy.ini  pyproject.toml  requirements.txt  typos.toml
.github/: actionlint.yaml
.github/workflows/: _e2e_nightly_multi_node.yaml  _e2e_nightly_single_node.yaml  _e2e_nightly_single_node_models.yaml  _e2e_test.yaml  _nightly_image_build.yaml  _optional_smart_e2e.yaml  _pre_commit.yml  _schedule_image_build.yaml  dispatch_main2main_bisect.yaml  pr_cherry_pick_command.yml  pr_test_full.yaml  pr_test_light.yaml  push_build_csrc_cache.yaml  schedule_doc_linkcheck.yaml  schedule_doc_translate.yaml  schedule_image_build_and_push.yaml  schedule_lint_image_build.yaml  schedule_nightly_test_a2.yaml  schedule_nightly_test_a3.yaml  schedule_release_code_and_wheel.yml  schedule_test_vllm_main.yaml  schedule_update_estimated_time.yaml  schedule_vllm_e2e_test.yaml
csrc/: CMakeLists.txt  build.sh  build_aclnn.sh  torch_binding.cpp  torch_binding_meta.cpp  version.info
csrc/cmake/: build_empty_package.cmake  custom_build.cmake  func.cmake  func_examples.cmake  func_utest.cmake  gen_ops_info.cmake  makeself_built_in.cmake  obj_func.cmake  opbuild.cmake  package.cmake  rty_obj_func.cmake  runtimeKB.cmake  static.cmake  symbol.cmake  ut.cmake  variables.cmake
csrc/common/: CMakeLists.txt
csrc/kernels/: npu_moe_token_permute.cpp  npu_moe_token_unpermute.cpp
csrc/mc2/: CMakeLists.txt
docs/source/: conf.py  faqs.md  installation.md  quick_start.md
examples/disaggregated_prefill_v1/: mooncake_connector_deployment_guide.md
examples/epd_disaggregated/: epd_disaggregated_guide.md
tests/e2e/: conftest.py
tests/multicard/: test_qwen3_moe.py
tests/singlecard/: test_offline_inference.py
tests/ut/: moe_util.py  (+6 more)
tools/: ai_qos.py  bisect_helper.py  bisect_vllm.sh
tools/ai_qos/: CMakeLists.txt  ai_qos.cpp
vllm_ascend/: __init__.py  ascend_config.py  ascend_forward_context.py  envs.py  platform.py  utils.py
(+357 files in other folders)
